--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,6 @@ capybara-*.html
 rerun.txt
 pickle-email-*.html
 *~
-/config/database.yml
-/config/oauth.yml
-/config/deploy.rb
 .DS_Store
 /public/export/
+/config/initializers/dev_environment.rb
